# nano-gpt

./: README.md  bigram.py  gpt-dev.ipynb  pyproject.toml
